2004-01-05  Shaun McCance  <shaunm@gnome.org>

	* data/Makefile.am:
	* data/default.css:
	* src/yelp-theme.c:
	* src/yelp-theme.h:
	- Added default CSS file.

	* src/yelp-toc-pager.c:
	- Switched to using GString for writing the page.
	- Put content writing in a separate function, to make inlining easier.

2004-01-03  Shaun McCance  <shaunm@gnome.org>

	* src/Makefile.am:
	* src/test-pager.c:
	- Make test-pager work again.

2004-01-03  Robert Sedak  <robert.sedak@sk.htnet.hr>

        * configure.in: Added "hr" in ALL_LINGUAS.

2004-01-02  Shaun McCance  <shaunm@gnome.org>

	* src/yelp-html-gtkhtml2.c:
	* src/yelp-html.h:
	* src/yelp-window.c:
	- Started working on the jump-to-anchor thing.

2004-01-02  Shaun McCance  <shaunm@gnome.org>

	* src/yelp-db-pager.c:
	- Implement yelp:chunk-depth PI.

	* src/yelp-toc-pager.c:
	- Started preparing to read man dirs.

	* src/yelp-uri.c:
	- Handle absolute ghelp: URIs.

	* src/yelp-window.c:
	- Handle HTML pages.  Not done yet.

2004-01-01  Shaun McCance  <shaunm@gnome.org>

	* src/yelp-db-pager.c:
	- A quick comment, to remind me.

	* src/yelp-html-gtkhtml2.c:
	- Don't let the html view shrink to nothing.

	* src/yelp-window.c:
	- Handle external URIs, like web sites and stuff.

	* test/testdoc1/testdoc1.xml:
	- Put in tests for some inline elements.

2003-12-31  Shaun McCance  <shaunm@gnome.org>

	* src/Makefile.am:
	- Temporarily removed test programs from the build.
	- Removed yelp-util from the yelp build.

	* src/test-uri.c:
	- Some changes for GnomeVFSURI, but not enough.

	* src/yelp-base.c:
	* src/yelp-cache.h:
	* src/yelp-db-pager.c:
	* src/yelp-db-pager.h:
	* src/yelp-history.c:
	* src/yelp-history.h:
	* src/yelp-html-gtkhtml2.c
	* src/yelp-html.h:
	* src/yelp-pager.c:
	* src/yelp-pager.h:
	* src/yelp-toc-pager.c:
	* src/yelp-uri.c:
	* src/yelp-uri.h:
	* src/yelp-window.c:
	* src/yelp-window.h:
	- Switching to GnomeVFSURI.

	* src/yelp-db-pager.c:
	- Remove leading/trailing whitespace from titles.
