@@ -1,4 +1,4 @@
-/* -*- Mode: C; tab-width: 8; indent-tabs-mode: t; c-basic-offset: 8 -*- */
+/* -*- Mode: C; tab-width: 8; indent-tabs-mode: t; c-basic-offset: 4 -*- */
 /*
  * Copyright (C) 2002 Mikael Hallendal <micke@imendio.com>
  *
@@ -20,16 +20,51 @@
 
 #include <config.h>
 
+#include <libgnome/gnome-i18n.h>
+
 #include "yelp-error.h"
 
 GQuark
 yelp_error_quark (void)
 {
-	static GQuark q = 0;
+    static GQuark q = 0;
 
-	if (q == 0) {
-		q = g_quark_from_static_string ("yelp-error-quark");
-	}
-	
-	return q;
+    if (q == 0)
+	q = g_quark_from_static_string ("yelp-error-quark");
+
+    return q;
 }
+
+void
+yelp_set_error (GError **error, YelpError code)
+{
+    switch (code) {
+    case YELP_ERROR_NO_DOC:
+	g_set_error (error,
+		     YELP_ERROR,
+		     YELP_ERROR_NO_DOC,
+		     _("The selected document could not be opened"));
+	break;
+    case YELP_ERROR_NO_PAGE:
+	g_set_error (error,
+		     YELP_ERROR,
+		     YELP_ERROR_NO_PAGE,
+		     _("The selected page could not be found in this document."));
+	break;
+    case YELP_ERROR_NO_TOC:
+	g_set_error (error,
+		     YELP_ERROR,
+		     YELP_ERROR_NO_TOC,
+		     _("The table of contents could not be read."));
+	break;
+    case YELP_ERROR_NO_SGML:
+	g_set_error (error,
+		     YELP_ERROR,
+		     YELP_ERROR_NO_SGML,
+		     _("DocBook SGML documents are no longer supported."));
+	break;
+    default:
+	g_assert_not_reached ();
+    }
+}
+
